metadata-sfdx/force-app/main/default/objects/CustomerSuccessGuidanceSetting__mdt/CustomerSuccessGuidanceSetting__mdt.object-meta.xml
<CustomObject>
    <label>Customer Success Guidance Setting</label>
    <pluralLabel>Customer Success Guidance Settings</pluralLabel>
</CustomObject>