metadata-sfdx/force-app/main/default/objects/CustomerSuccessGuidanceSetting__mdt/fields/CSGCSFlagType__c.field-meta.xml
<CustomField>
    <fullName>CSGCSFlagType__c</fullName>
    <label>CSG CS Flag Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>