metadata-sfdx/force-app/main/default/objects/CustomerSuccessGuidanceSetting__mdt/fields/CSGFlagExplanation__c.field-meta.xml
<CustomField>
    <fullName>CSGFlagExplanation__c</fullName>
    <label>CSG Flag Explanation</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>