metadata-sfdx/force-app/main/default/objects/CustomerSuccessGuidanceSetting__mdt/fields/CSGName__c.field-meta.xml
<CustomField>
    <fullName>CSGName__c</fullName>
    <label>CSG Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>