metadata-sfdx/force-app/main/default/objects/CustomerSuccessGuidanceSetting__mdt/fields/ServiceSubscriptionType__c.field-meta.xml
<CustomField>
    <fullName>ServiceSubscriptionType__c</fullName>
    <label>Service Subscription Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>